Fix spacing issue between in/completed tasklists and tasklist class bug.

--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -21,7 +21,7 @@
     overflow-y: scroll;
     padding: 20px;
     display: grid;
-    grid-template: 40px auto 40px auto / 1fr;
+    grid-template: 40px minmax(min-content, max-content) 40px minmax(min-content, max-content) / 1fr;
     row-gap: 20px;
   }
 }
